# MyProject

octo/cmdlog/clog/src/: CMakeLists.txt  agentclog.cxx  asyncappender.cxx  devinfohelper.cxx  env.cxx  fileappender.cxx  layout.cxx  log.cxx  parse_config.cxx  patternlayout.cxx  queue.cxx  scribe_client.cxx  tblog.cxx  timehelper.cxx
octo/cmdlog/clog/test/: CMakeLists.txt  clean.sh  env_test.cxx  interface_base.cxx  interface_base.h  log.conf  main.cxx  parse_config_test.cxx  singleton_clog.cxx  tags_test.cxx  test.sh  testclog.c  testclog.cxx  time_test.cxx
octo/controlServer/: CMakeLists.txt  manifest.yaml
octo/controlServer/cmake/: FindGtest.cmake  FindPlugin.cmake
octo/controlServer/octoidl/: CMakeLists.txt
octo/controlServer/script/: run.sh
octo/controlServer/src/: CMakeLists.txt  ControlServer.cpp  ControlServer.h  common.cpp  common.h  condition_latch.cpp  condition_latch.h  controller.thrift  main.cpp  ops_fetcher.cpp  ops_fetcher.h  plugin.thrift  storage.cpp  storage.h  task_queue.cpp  task_queue.h  thread_pool.cpp  thread_pool.h
octo/controlServer/src/gen-cpp/: ControllerService.cpp  ControllerService.h  controller_constants.cpp  controller_constants.h  controller_types.cpp  controller_types.h
octo/controlServer/src/plugin/: Core.cpp  Core.h  Core_server.skeleton.cpp  plugin_constants.cpp  plugin_constants.h  plugin_types.cpp  plugin_types.h
octo/controlServer/src/tests/: CMakeLists.txt  main.cpp  mock_unittest.cpp  ops_unittest.cpp  rpc_unittest.cpp  storage_unittest.cpp  thread_pool_unittest.cpp
octo/mafka-cpp-client/: CMakeLists.txt  Makefile  castle.config  config.h
octo/mafka-cpp-client/command_line/: CommandLine.cpp  Makefile
octo/mafka-cpp-client/src/: Atomic.h  CastleClient.cpp  CastleClient.h  CastleConfig.cpp  CastleConfig.h  ClusterConsumerImpl.cpp  ClusterConsumerImpl.h  Command.cpp  Command.h  CommandExecutor.cpp  CommandExecutor.h  CommandHandler.cpp  CommandHandler.h  CommandQueue.cpp  CommandQueue.h  Common.cpp  Common.h  ConcurrentArrayQueue.h  Condition.cpp  Condition.h  ConfigFile.cpp  ConfigFile.h  Consumer.cpp  Consumer.h  ConsumerExecutor.cpp  ConsumerExecutor.h  ConsumerImpl.cpp  ConsumerImpl.h  EndPointImpl.cpp  EndPointImpl.h  Handle.cpp  Handle.h  IDGenerator.cpp  IDGenerator.h  KafkaInstance.cpp  KafkaInstance.h  KafkaTopic.cpp  KafkaTopic.h  LockGuard.h  Log.cpp  (+37 more)
octo/mafka-cpp-client/src/castle/: castle_data.thrift  castle_service.thrift
octo/mafka-cpp-client/test/test_consumer/: Consumer  Consumer.c  Consumer.cpp  Makefile  Makefile_bak  make_inter  run_consumer
octo/mafka-cpp-client/test/test_producer/: Main.cpp.multi_producer  Makefile  Makefile_bak  Producer  Producer.c  Producer.cpp  make_inter  run_producer
octo/mtrace/cmtrace/: CMakeLists.txt
octo/mtrace/cmtrace/idl/: aggregator_common.thrift  appkey.thrift  config_common.thrift  idc.thrift  operation_common.thrift  quota_common.thrift  sandbox_common.thrift  sg_worker_service.thrift  sgagent_common.thrift  sgagent_service.thrift  unifiedProtocol.thrift  (+1 more)
octo/mtransport/cthrift/: CMakeLists.txt  build.sh
octo/plugin/: CMakeLists.txt  build.sh  manifest.yaml  run.sh
octo/plugin/cmake/: FindLibCurl.cmake
octo/plugin/conf/: config.xml  cplugin.xml  cplugin_test.xml  cr_agent_config.xml  log4cplus.conf  sg_agent_config.xml
octo/plugin/controller/: controller.py  inf_hlb.txt  inf_important.txt  inf_mafka.txt  inf_test.txt  iplist_inf_all.txt  iplist_office1.txt  iplist_office2.txt  scan.py
octo/plugin/core/: CMakeLists.txt  RetryManager.h  controlServerManager.cc  controlServerManager.h  core_server.cc  core_server.h  cplugin_def.h  host_manager.cc  host_manager.h  host_process.cc  host_process.h  hostimpl.h  main.cc  plugin_manager.cc  plugin_manager.h  plugindef.h  pluginimpl.h  thrift_client_handler.cc  thrift_client_handler.h  version.cc
octo/plugin/example/: CMakeLists.txt  SGAgentHandler.h  SGAgentHandler_v1.cc  SGAgentHandler_v2.cc  client.cc  cplugin.cc  getMoniter.cc  idc.cc  libcalc.h  libcalc_test.cc  libcalc_v1.cc  libcalc_v2.cc  libserver.cc  libsgagent_v1.cc  libsgagent_v2.cc  restart.cc  rollback.cc  start.cc  stop.cc  testServer.cc  updatefile.cc  upgrade.cc
octo/plugin/script/: hulk_offline_package.sh  pre.sh  run
octo/plugin/test/: CMakeLists.txt  main.cpp  unit_test.cpp  unit_test_control_server_list.cpp  unit_test_host_manager.cpp  unit_test_octoidl.cpp
octo/sg_agent/: CMakeLists.txt  README.md  changelog
octo/sg_agent/cmake/: FindCmtraceV2.cmake  FindCthrift.cmake  FindCurl.cmake  FindMafka.cmake
octo/sg_agent/conf/: appenv_offline  appenv_online  client_offline.xml  idc.xml  log4cplus.conf  sg_agent_mutable_new_prod.xml  sg_agent_mutable_new_stage.xml  sg_agent_mutable_offline_prod.xml  sg_agent_mutable_offline_test.xml  sg_agent_mutable_online_prod.xml  sg_agent_mutable_online_stage.xml  sg_agent_mutable_unified.xml  sg_agent_online_servicelist.xml
octo/sg_agent/contrib/: README  sg_agent.spec
octo/sg_agent/gen-cpp/: AggregatorService.h  MNSCacheService.cpp  MNSCacheService.h  MtConfigService.cpp  MtConfigService.h  SGAgent.cpp  SGAgent.h  appkey_constants.cpp  appkey_constants.h  appkey_types.cpp  appkey_types.h  config_common_types.cpp  config_common_types.h  config_data_constants.cpp  config_data_constants.h  config_data_types.cpp  config_data_types.h  config_service_constants.cpp  config_service_types.cpp  config_service_types.h  mnsc_data_constants.cpp  mnsc_data_constants.h  mnsc_data_types.cpp  mnsc_data_types.h  mnsc_service_types.h  operation_common_types.cpp  operation_common_types.h  quota_common_types.h  sandbox_common_types.cpp  sg_worker_service_constants.h  sg_worker_service_types.cpp  sgagent_common_constants.cpp  sgagent_common_constants.h  sgagent_common_types.cpp  sgagent_common_types.h  sgagent_service_types.h  sgagent_worker_service_types.cpp  sgagent_worker_service_types.h
octo/sg_agent/tool/: build4Rel_sgagent.sh  build4Rel_sgagent_converity.sh  build4Rel_sgagentworker.sh  build_unittest.sh  clear4git.sh  hulk_offline_package.sh  hulk_online_package.sh  run_sgagent  run_sgagentworker
(+4288 files in other folders)
