cmake_minimum_required(VERSION 2.8)

PROJECT(cplugin)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

#SET(THRIFT_LIBRARY ${CMAKE_SOURCE_DIR}/third_party/thrift/lib/libthrift.a)
#MESSAGE(STATUS "THRIFT_LIBRARY ${THRIFT_LIBRARY}")
SET(THRIFTNB_LIBRARY ${CMAKE_SOURCE_DIR}/third_party/thrift/lib/libthriftnb.a)
MESSAGE(STATUS "THRIFTNB_LIBRARY ${THRIFTNB_LIBRARY}")

SET(MUDUO_BASE_LIBRARY /usr/lib64/libmuduo_base.a)
MESSAGE(STATUS "MUDUO_BASE_LIBRARY ${MUDUO_BASE_LIBRARY}")
SET(MUDUO_NET_LIBRARY /usr/lib64/libmuduo_net.a)
MESSAGE(STATUS "MUDUO_NET_LIBRARY ${MUDUO_NET_LIBRARY}")

SET(GLOG_LIBRARY ${CMAKE_SOURCE_DIR}/third_party/glog/lib/libglog.a)


FIND_PACKAGE(LibCurl REQUIRED)
MESSAGE(STATUS "LIBCURL_INCLUDE_DIR ${LIBCURL_INCLUDE_DIR}")
MESSAGE(STATUS "LIBCURL_LIBRARY ${LIBCURL_LIBRARY}")

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(example)
#ADD_SUBDIRECTORY(test)

EXECUTE_PROCESS(COMMAND cp -rf ${CMAKE_BINARY_DIR}/script/run ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/)
